--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <li class="guess" id='guess2'>-</li>
               <li class="guess" id='guess3'>-</li>
               <li class="guess" id='guess4'>-</li>
+              <li class='guess' id='guess5'>-</li>
             </ul>
           </div>
 
